fix(component): Change tags line height to fix vertical align

--- a/packages/recomponents/src/styles/theme.scss
+++ b/packages/recomponents/src/styles/theme.scss
@@ -187,7 +187,7 @@ body, .article {
     --badge-info-border: none;
     --badge-tag-background: var(--gray-color-light);
     --badge-tag-color: var(--mono-color-700);
-    --badge-tag-line-height: 16px;
+    --badge-tag-line-height: 20px;
     --badge-tag-border-radius: var(--border-radius-xxs);
     --badge-tag-font-weight: var(--font-weight-bold);
     --badge-tag-margin: 0 var(--space-xs) var(--space-xxs) 0;
